# haskell-practice

./: .gitignore  develop.nix  flake.nix  hie.yaml  learnyouahaskell.cabal
app/: first.hs  hello.hs
src/: First.hs
